# gsmake

./: .gitignore  .gsmake.lua  CMakeLists.txt  LICENSE  README.md  args.lua  class.lua  filepath.lua  fs.lua  log.lua  repo.db  sandbox.lua  sys.lua
etc/: config.lua
gsmake/: CMakeLists.txt  main.cpp
lemon/: .gitignore  .gsmake.lua  CMakeLists.txt  README.md
lemon/src/main/cpp/: CMAKELists.txt  CMakeLists.txt
lemon/src/test/cpp/: CMakeLists.txt  fs_test.cpp  gc_test.cpp  io_test.cpp  io_test.cpp~RF1c3da677.TMP  main.cpp  os_test.cpp
lib/gsmake/: .gsmake.lua  config.lua  main.lua  remotes.lua
lib/gsmake/cmd/builtin/: .gsmake.lua
lib/gsmake/gsmake/: arch.lua  gsmake.lua  init.lua  loader.lua  loaderdb.lua  package.lua  plugin.lua  repo.lua  runner.lua  sandbox.lua  sync.lua
lib/gsmake/gsmake/sandbox/: package.lua  plugin.lua  remotes.lua  runner.lua
lib/gsmake/lake/: db.lua  init.lua  loader.lua  package.lua  plugin.lua  runner.lua  sync.lua
lib/gsmake/lake/sandbox/: package.lua  plugin.lua  pluginrunner.lua
lib/gsmake/lemoon/: .gsmake.lua  LICENSE  README.md  args.lua  class.lua  filepath.lua  fs.lua  log.lua  logsink.lua  md5.lua  regex.lua  requirex.lua  sandbox.lua  sqlite3.lua  sys.lua  throw.lua  tpl.lua  url.lua  uuid.lua
lib/gsmake/lemoon/codegen/: file.lua  init.lua  lexer.lua  memory.lua  render.lua
lib/gsmake/plugin/clang/: .gsmake.lua
lib/gsmake/plugin/lua/: .gsmake.lua
lib/gsmake/sync/: git.lua
src/main/cpp/: CMakeLists.txt
src/main/cpp/lemon/: config.h  config.h.in
src/main/cpp/lemoon/: fs.cpp  os.cpp  regex.cpp  uuid.cpp
src/test/cpp/: os_test.cpp
test/include/lemon/: uuid.hpp
test/include/lemon/io/: io.hpp  iocp_io_service.hpp  iocp_io_socket.hpp  iocp_io_stream.hpp  reactor_io_service.hpp  (+1 more)
test/include/lemoon/: lemoon.h
test/lib/gsmake/: config.lua  main.lua  remotes.lua
(+180 files in other folders)
